--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,7 @@ provider:
     FTP_PORT: ${file(./config.yml):${self:custom.stage}.FTP_PORT}
     FTP_USER: ${file(./config.yml):${self:custom.stage}.FTP_USER}
     FTP_REMOTE_PATH: ${file(./config.yml):${self:custom.stage}.FTP_REMOTE_PATH}
+    STAGE: ${self:custom.stage}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -64,7 +65,7 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         AccessControl: PublicReadWrite
-        BucketName: ${self:provider.environment.S3_BUCKET}
+        BucketName: "${self:provider.environment.S3_BUCKET}-${self:custom.stage}"
         CorsConfiguration:
           CorsRules:
           - AllowedHeaders: ['*']
