--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,8 @@ service: BugatchiMobileDataPipeLine
 
 plugins:
   - serverless-pseudo-parameters
+  - serverless-plugin-tracing
+  - serverless-plugin-lambda-dead-letter
   - serverless-s3-local
   - serverless-offline-scheduler
   - serverless-offline
@@ -30,14 +32,16 @@ provider:
   region: us-east-1
   profile: serverless-admin
   runtime: nodejs8.10
+  tracing: true
   environment:
-    S3_BUCKET: ${file(./config.yml):${self:custom.stage}.S3_BUCKET}
+    ATHENA_S3_BUCKET: ${file(./config.yml):ATHENA_S3_BUCKET}
+    FTP_S3_BUCKET: ${file(./config.yml):FTP_S3_BUCKET}
     FTP_HOST: ${file(./config.yml):${self:custom.stage}.FTP_HOST}
     FTP_PASSWORD: ${file(./config.yml):${self:custom.stage}.FTP_PASSWORD}
-    FILENAME: ${file(./config.yml):${self:custom.stage}.FILENAME}
-    FTP_PORT: ${file(./config.yml):${self:custom.stage}.FTP_PORT}
-    FTP_USER: ${file(./config.yml):${self:custom.stage}.FTP_USER}
-    FTP_REMOTE_PATH: ${file(./config.yml):${self:custom.stage}.FTP_REMOTE_PATH}
+    FILENAME: ${file(./config.yml):FILENAME}
+    FTP_PORT: ${file(./config.yml):FTP_PORT}
+    FTP_USER: ${file(./config.yml):FTP_USER}
+    FTP_REMOTE_PATH: ${file(./config.yml):FTP_REMOTE_PATH}
     STAGE: ${self:custom.stage}
   iamRoleStatements:
     - Effect: Allow
@@ -48,54 +52,76 @@ provider:
       Action:
         - s3:*
       Resource: "*"
+    - Effect: "Allow"
+      Action:
+        - "xray:PutTraceSegments"
+        - "xray:PutTelemetryRecords"
+      Resource:
+        - "*"
 
 functions:
 
    transfer:
      handler: transfer/index.handler
+     deadLetter:
+       sqs: transfer-dl-queue
      events:
-       - schedule: cron(0 23 * * ? *)
-#       The above is in UTC Time;
-#       This function will execute at every midnight UTC time
+      - schedule: cron(0 23 * * ? *)
+
+   transform:
+     handler: transform/index.handler
+     deadLetter:
+       sqs: transform-dl-queue
+     events:
+      - s3: ftp
 
 resources:
   Resources:
 
-    localbucket:
+    athenaS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
         AccessControl: PublicReadWrite
-        BucketName: "${self:provider.environment.S3_BUCKET}-${self:custom.stage}"
+        BucketName: "${self:provider.environment.ATHENA_S3_BUCKET}-${self:custom.stage}"
         CorsConfiguration:
           CorsRules:
-          - AllowedHeaders: ['*']
-            AllowedMethods: [GET, PUT, HEAD, POST, DELETE]
-            AllowedOrigins: ['*']
-            Id: myCORSRuleId1
-            MaxAge: '3600'
+            - AllowedHeaders: ['*']
+              AllowedMethods: [GET, PUT, HEAD, POST, DELETE]
+              AllowedOrigins: ['*']
+              Id: myCORSRuleId1
+              MaxAge: '3600'
 
-    localbucketPolicy:
-      Type: AWS::S3::BucketPolicy
+    S3BucketFtp:
+      Type: AWS::S3::Bucket
       Properties:
-        Bucket:
-          Ref: localbucket
-        PolicyDocument:
-          Statement:
-          - Action:
-            - s3:*
-            Effect: Allow
-            Resource: ${self:custom.bucketArn}
-            Principal:
-              AWS:
-              - ${self:custom.private.role}
-      DependsOn:
-      - localbucket
+        AccessControl: PublicReadWrite
+        BucketName: "${self:provider.environment.FTP_S3_BUCKET}-${self:custom.stage}"
+        CorsConfiguration:
+          CorsRules:
+            - AllowedHeaders: ['*']
+              AllowedMethods: [GET, PUT, HEAD, POST, DELETE]
+              AllowedOrigins: ['*']
+              Id: myCORSRuleId1
+              MaxAge: '3600'
+
+    TransformLambdaPermissionFtpS3:
+      Type: "AWS::Lambda::Permission"
+      Properties:
+        FunctionName:
+          "Fn::GetAtt":
+            - TransformLambdaFunction
+            - Arn
+        Principal: "s3.amazonaws.com"
+        Action: "lambda:InvokeFunction"
+        SourceAccount:
+          Ref: AWS::AccountId
+        SourceArn: "arn:aws:s3:::${self:provider.environment.FTP_S3_BUCKET}-${self:custom.stage}"
 
 package:
   include:
     - transfer/**
+    - transform/**
   exclude:
-    - node_modules/**
     - test/**
     - .idea
     - docker-compose.yml
