--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.302.0",
     "jsftp": "^2.1.3",
-    "serverless-pseudo-parameters": "^2.2.0"
+    "serverless-plugin-lambda-dead-letter": "^1.2.1"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
@@ -14,6 +14,8 @@
     "serverless": "^1.30.3",
     "serverless-offline": "^3.25.11",
     "serverless-offline-scheduler": "^0.3.4",
+    "serverless-plugin-tracing": "^2.0.0",
+    "serverless-pseudo-parameters": "^2.2.0",
     "serverless-s3-local": "^0.3.17"
   },
   "scripts": {
