fixed ftp transfer lambda

--- a/serverless.yml
+++ b/serverless.yml
@@ -61,6 +61,10 @@ provider:
       Action:
         - sqs:*
       Resource: "*"
+    - Effect: Allow
+      Action:
+        - athena:*
+      Resource: "*"
 
 functions:
 
