--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.302.0",
+    "aws-xray-sdk": "^2.1.0",
     "jsftp": "^2.1.3",
     "serverless-plugin-lambda-dead-letter": "^1.2.1"
   },
