--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "Data pipeline for Bugatchi Mobile",
   "main": "index.js",
   "dependencies": {
+    "athena-client": "^2.4.0",
     "aws-sdk": "^2.302.0",
     "aws-xray-sdk": "^2.1.0",
     "jsftp": "^2.1.3",
-    "serverless-plugin-lambda-dead-letter": "^1.2.1"
+    "lodash.frompairs": "^4.0.1",
+    "lodash.topairs": "^4.3.0",
+    "serverless-plugin-existing-s3": "^2.3.0",
+    "serverless-plugin-lambda-dead-letter": "^1.2.1",
+    "serverless-pseudo-parameters": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
     "nodeunit": "^0.11.3",
     "serverless": "^1.30.3",
+    "serverless-dynamodb-local": "^0.2.36",
     "serverless-offline": "^3.25.11",
     "serverless-offline-scheduler": "^0.3.4",
     "serverless-plugin-tracing": "^2.0.0",
-    "serverless-pseudo-parameters": "^2.2.0",
     "serverless-s3-local": "^0.3.17"
   },
   "scripts": {
