--- a/package.json
+++ b/package.json
@@ -8,17 +8,13 @@
     "aws-xray-sdk": "^2.1.0",
     "aws-xray-sdk-core": "^2.1.0",
     "csvtojson": "^2.0.8",
-    "fast-csv": "^2.4.1",
     "jsftp": "^2.1.3",
-    "lodash.frompairs": "^4.0.1",
-    "lodash.topairs": "^4.3.0",
+    "serverless-dynamodb-autoscaling": "^0.6.2",
     "serverless-offline-sns": "^0.49.0",
     "serverless-plugin-existing-s3": "^2.3.0",
     "serverless-plugin-lambda-dead-letter": "^1.2.1",
     "serverless-pseudo-parameters": "^2.4.0",
-    "serverless-s3-remover": "^0.6.0",
-    "split2": "^3.1.0",
-    "through2": "^3.0.0"
+    "serverless-s3-remover": "^0.6.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
