reverts back to node v8.10

--- a/serverless.yml
+++ b/serverless.yml
@@ -122,10 +122,6 @@ provider:
         - sns:*
       Resource: "*"
 
-layers: # layer to update node to v11.7.0, see https://github.com/lambci/node-custom-lambda
-  nodeupdate:
-    path: arn:aws:lambda:us-east-1:553035198032:layer:nodejs11:6
-
 functions:
 
   transfer:
@@ -135,8 +131,6 @@ functions:
       sqs: transfer-dl-queue
     events:
       - schedule: cron(0 23 * * ? *)
-    layers:
-      - {Ref: NodeupdateLambdaLayer}
 
   transform:
     handler: transform/index.handler
@@ -148,8 +142,6 @@ functions:
           bucket: "${self:provider.environment.FTP_S3_BUCKET}-${self:custom.stage}"
           events:
             - s3:ObjectCreated:*
-    layers:
-      - {Ref: NodeupdateLambdaLayer}
 
   filter:
     handler: filter/index.handler
@@ -158,8 +150,6 @@ functions:
       sqs: filter-dl-queue
     events:
       - sns: transformQueryId
-    layers:
-      - {Ref: NodeupdateLambdaLayer}
 
   formatted:
     handler: formatted/index.handler
@@ -168,8 +158,6 @@ functions:
       sqs: formatted-dl-queue
     events:
       - sns: filterQueryId
-    layers:
-      - {Ref: NodeupdateLambdaLayer}
 
   import:
     handler: import/index.handler
@@ -178,8 +166,6 @@ functions:
       sqs: import-dl-queue
     events:
       - sns: formattedQueryId
-    layers:
-      - {Ref: NodeupdateLambdaLayer}
 
 resources:
   Resources:
@@ -264,12 +250,11 @@ resources:
 package:
   include:
     - filter/**
-    - transfer/**
+    - formatted/**
     - import/**
+    - transfer/**
     - transform/**
   exclude:
-    - test/**
-    - .idea
     - docker-compose.yml
     - README.md
 
